# Code_space

./: .gitignore  README.md
Markdown/: A tour of My CS.md  C++杂谈.md  CSAPP.md  Design Pattern.docx  Design Pattern.md  Java web后端开发.md  Java名词解释.md  MLSys 研究计划.md  OpenCL.md  SM2.md  The template of basic algorithm.epub  The template of basic algorithm.md  cuda learn.md  day1-1.md  linux.md  python答辩flask.md  rcore.md  中国近代史纲要课后习题.md  五.Bcrypt加密.md  六.国密SM9加密算法.md  内存管理.md  卷积神经网络(Datawhale X 李宏毅苹果书AI夏令营).md  图解HTTP.md  大数据与数据思维.md  小练习.md  常用网络协议的端口.md  推荐系统.md  操作系统概念.md  数学建模.md  数学建模美赛.md  数据处理.md  数据库原理.md  数论.md  深度学习基础(Datawhale X 李宏毅苹果书AI夏令营).md  王道操作系统.md  甲骨文.md  计算机系统基础.md  计算机网络.md  超市收银.md  软件测试.md  (+1 more)
OpenCL/: HelloWorld_Kernel.cl  Makefile.win  Test3.dev  Test3.layout  demo.7z  gmon.out  main.cpp  project2.dev  project2.layout  test.cpp  test1.c  test2.cl.cpp
c++/: delete_n_times.cpp  hello.html  testNUm1.cpp
c/CSapp/: 5-1swap.c  CMakeLists.txt  address.c  alloc1.cpp  bang函数.c  binMirror.c  bitAnd函数.c  divpwrFun.cpp  do_while翻译.c  fToUn.c  fitsBits.c  for_loop嵌套翻译.c  for_loop翻译.c  getByte.c  ilog2函数.c  isLessOrEqual函数.c  isPositive.c  negate.c  showIP.c  switch_case翻译.c  twosComplement.c  type.c  umax.c  while结构翻译.c  一维数组的访问1.c  一维数组的访问2.c  二维数组的访问.c  位运算1.c  函数调用时的参数传递.c  无符号除法shixiN.c  栈上的局部存储.c  简单的函数调用.c  简单的递归调用1.c  简单的递归调用2.c  结构体的访问.c  计算机系统.c  选择结构的翻译2.c  选择结构的翻译3.c
clion/: .clang-format  CMakeLists.txt
clion/algorithm/: CMakeLists.txt
clion/algorithm/leetcode/: ACWing.cpp  ACWing1.cpp  ACWing2.cpp  ACWing3.cpp  ACWing4.cpp  ACWing5.cpp  ACWing6.cpp  Test.cpp  string_to_int.cpp  test.c
clion/algorithm/os2022/: process1.cpp
octave/: graph.m  (+2 more)
(+1547 files in other folders)
