cmake_minimum_required(VERSION 3.23)
project(CSapp)

set(CMAKE_CXX_STANDARD 14)

add_executable(CSapp
#        简单的递归调用1.c)
         5-1swap.c)
#        address.c)
#        alloc1.cpp
#        bang????.c
#        binMirror.c
#        bitAnd????.c
#        divpwrFun.cpp)
#        do_while????.c
#        fitsBits.c
#        for_loop??????.c
#        for_loop????.c
#        fToUn.c
#        getByte.c
#        ilog2????.c
#        isLessOrEqual????.c
#        isPositive.c
#        negate.c
#        showIP.c
#        switch_case????.c
#        twosComplement.c
#        type.c
#        umax.c
#        while??????.c
#        ??????????1.c
#        ??????????2.c
#        ???????????.c
#        ?????1.c
#        ??????????????????.c
#        ????????shixiN.c
#        ????????.c
#        ??????????.c
#        ????????1.c
#        ????????2.c
#        ????????.c
#        ???????.c
#        ?????????2.c
#        ?????????3.c)
